WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148770
Range.cloneContents() / extractContents should throw a HierarchyRequestError when encountering a doctype
https://bugs.webkit.org/show_bug.cgi?id=148770
Summary
Range.cloneContents() / extractContents should throw a HierarchyRequestError ...
Ryosuke Niwa
Reported
2015-09-03 18:50:45 PDT
Range.cloneContents should throw a HierarchyRequestError when the range contains a DocType node as specified in
https://dom.spec.whatwg.org/#concept-range-clone
This bug was found by the newly added LayoutTests/http/tests/w3c/dom/ranges/Range-cloneContents.html
Attachments
Patch
(13.37 KB, patch)
2015-09-21 11:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-09-03 18:51:24 PDT
<
rdar://problem/22570898
>
Chris Dumez
Comment 2
2015-09-21 11:29:48 PDT
Created
attachment 261667
[details]
Patch
WebKit Commit Bot
Comment 3
2015-09-21 12:15:22 PDT
Comment on
attachment 261667
[details]
Patch Clearing flags on attachment: 261667 Committed
r190067
: <
http://trac.webkit.org/changeset/190067
>
WebKit Commit Bot
Comment 4
2015-09-21 12:15:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug