Range.cloneContents() / extractContents should throw a HierarchyRequestError when encountering a doctype https://bugs.webkit.org/show_bug.cgi?id=148770 <rdar://problem/22570898>

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline W3C DOM test now that more checks are passing.

* web-platform-tests/dom/ranges/Range-cloneContents-expected.txt:

Source/WebCore:

Range.cloneContents() and Range.extractContents() should throw a
HierarchyRequestError when encountering a doctype:
- https://dom.spec.whatwg.org/#concept-range-clone (step 12)
- https://dom.spec.whatwg.org/#concept-range-extract (step 12)

However, Range.deleteContents() should not:
- https://dom.spec.whatwg.org/#dom-range-deletecontents

WebKit was not throwing in the Range.cloneContents() case. This
aligns updates our behavior to match the specification and
Firefox.

Tests: fast/dom/Range/clone-contents-document-type.html
       fast/dom/Range/delete-contents-document-type.html
       fast/dom/Range/extract-contents-document-type.html

* dom/Range.cpp:
(WebCore::Range::processContentsBetweenOffsets):

LayoutTests:

Add new tests to cover the behaviour of Range's cloneContents() / extractContents()
and deleteContents() when encountering a doctype.

* fast/dom/Range/clone-contents-document-type-expected.txt: Added.
* fast/dom/Range/clone-contents-document-type.html: Added.
* fast/dom/Range/delete-contents-document-type-expected.txt: Added.
* fast/dom/Range/delete-contents-document-type.html: Added.
* fast/dom/Range/extract-contents-document-type-expected.txt: Added.
* fast/dom/Range/extract-contents-document-type.html: Added.
* fast/dom/Range/resources/frame-with-doctype.html: Added.


Canonical link: https://commits.webkit.org/167499@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190067 268f45cc-cd09-0410-ab3c-d52691b4dbfc