Source/WebCore/dom/Range.h
@@ -164,7 +164,7 @@ private:
     bool containedByReadOnly() const;
 
     enum ActionType { Delete, Extract, Clone };
-    void checkDeleteExtract(ActionType, ExceptionCode&);
+    void checkDeleteExtract(ExceptionCode&);
     RefPtr<DocumentFragment> processContents(ActionType, ExceptionCode&);
     static RefPtr<Node> processContentsBetweenOffsets(ActionType, PassRefPtr<DocumentFragment>, Node*, unsigned startOffset, unsigned endOffset, ExceptionCode&);
     static void processNodes(ActionType, Vector<RefPtr<Node>>&, PassRefPtr<Node> oldContainer, PassRefPtr<Node> newContainer, ExceptionCode&);
